--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -8,6 +8,7 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.3.2",
         "bootstrap": "^5.3.0-alpha2",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.3",
         "lodash": "^4.17.21",
         "postcss": "^8.4.21",
