-Social icons in menu view are now hoverable.

--- a/frontEnd/composer.json
+++ b/frontEnd/composer.json
@@ -9,20 +9,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-curl": "*",
+        "ext-dom": "*",
+        "ext-iconv": "*",
+        "ext-libxml": "*",
+        "ext-pdo": "*",
+        "ext-readline": "*",
+        "ext-simplexml": "*",
         "guzzlehttp/guzzle": "^7.5.0",
         "laravel/framework": "^v9.52.4",
         "laravel/sanctum": "^3.x-dev",
         "laravel/tinker": "^v2.8.1",
         "laravel/ui": "^4.x-dev",
         "laravelcollective/html": "^6.0.x-dev",
-        "twbs/bootstrap-icons": "^1.10",
-        "ext-curl": "*",
-        "ext-libxml": "*",
-        "ext-dom": "*",
-        "ext-iconv": "*",
-        "ext-simplexml": "*",
-        "ext-pdo": "*",
-        "ext-readline": "*"
+        "nesbot/carbon": "^2.66",
+        "twbs/bootstrap-icons": "^1.10"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4.x-dev",
